# fourequalsten_hint

./: LICENSE  README.md  pyproject.toml
src/4equals10/: main.py
src/fourequalsten_hint/: __init__.py  example.py  feth.py  functions.py  test.py
