[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "4equals10"
version = "0.0.1"
authors = [
  { name="Cheewy", email="cheewy.perso@gmail.com" },
]
description = "4=10's Solution Generator - by Cheewy"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
